--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -16,7 +16,7 @@
 body {
     font-family: var(--padrao);
     font-size: 1.5vw;
-    text-align: center;
+    color: white;
     animation: aparecer 0.5s ease-out ;
 }
 
@@ -47,6 +47,7 @@ button {
     --laranja: #F2A25C;
     --titulo: 'inclusao';
     --padrao: Arial, Helvetica, sans-serif;
+    --artistica: 'Acme', sans-serif;
 }
 
 /* Estilização da barrinha de rolagem */
