--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -18,6 +18,7 @@ body {
     font-size: 1.5vw;
     color: white;
     animation: aparecer 0.5s ease-out ;
+    overflow-x: hidden;
 }
 
 html {
@@ -104,6 +105,17 @@ button {
     from {
         opacity: 0;
         translate: 0 20vh;
+    }
+    to {
+        opacity: 1;
+        translate: 0 0;
+    }
+}
+
+@keyframes cima {
+    from {
+        opacity: 0;
+        translate: 0 -2vh;
     }
     to {
         opacity: 1;
