--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -131,3 +131,14 @@ button {
         opacity: 1;
     }
 }
+
+@keyframes reveal {
+    from {
+        opacity: 0;
+        clip-path: inset(45% 20% 45% 20%);
+    }
+    to {
+        opacity: 1;
+        clip-path: inset(0 0 0 0);
+    }
+}
