--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -21,10 +21,10 @@
         width: 75%;
     }
     #cabecalho .icone {
-        display: flex;
+        display: block;
         font-size: 2.5em;
         font-weight: bold;
-        padding: 0.1em;
+        padding: 0.2em;
         border-radius: 0.4em;
         cursor: pointer;
         transition-duration: .2s;
@@ -35,14 +35,38 @@
         color: var(--laranja);
     }
     #cabecalho .nav {
-        position: absolute;
-        right: -180%;
-        opacity: 0;
+        display: none;
+        position: fixed;
+        top: 0;
+        right: 0;
         background-color: var(--laranja);
         color: white;
+        box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.158);
+        border: 1px dashed white;
+        border-bottom-left-radius: 1em;
+        z-index: 1;
+        animation: reveal .4s ease-out;
+    }
+    @keyframes reveal {
+        from {
+            opacity: 0;
+            right: -30%;
+        }
+        to {
+            opacity: 1;
+            right: 0;
+        }
     }
     #cabecalho .nav ul {
         flex-direction: column;
+        gap: 0;
+    }
+    #cabecalho .nav ul a {
+        padding: 0.8em 1em;
+    }
+    #cabecalho .nav ul a:hover,
+    #cabecalho .nav ul a:focus-visible {
+        padding: 1em;
     }
 
     #conteudo #sobre .lugar {
@@ -74,7 +98,7 @@
     }
     #conteudo #sobre .historia .figura {
         max-width: 100%;
-        height: 53vh;
+        height: 25vh;
         animation: reveal 1s ease-in-out both;
         animation-timeline: view();
         animation-range: entry 25% cover 40%;
@@ -109,6 +133,11 @@
     }
     #conteudo #emocionais p:nth-child(even) {
         transform: translateX(30px);
+    }
+
+    #conteudo #topo {
+        font-size: 4em;
+        padding: 2.5%;
     }
 
     #rodape {
