--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -14,10 +14,10 @@
 }
 
 body {
-    font-family: var(--padrao);
-    font-size: 1.5vw;
+    font: 1.5vw var(--padrao);
+    background-color: var(--amarela);
     color: white;
-    animation: aparecer 0.5s ease-out ;
+    animation: aparecer .5s ease-out;
     overflow-x: hidden;
 }
 
@@ -57,7 +57,7 @@ button {
     width: auto;
 }
 ::-webkit-scrollbar-track {
-    background-color: transparent;
+    background-color: white;
 }
 ::-webkit-scrollbar-thumb {
     background-color: var(--amarela);
