--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -70,8 +70,8 @@
     }
 
     #conteudo #sobre .lugar {
-        padding: 2em;
-        padding-bottom: 3em;
+        padding: 2.5em;
+        padding-bottom: 5em;
     }
     #conteudo #sobre .lugar p {
         padding: 0.8em;
@@ -91,14 +91,21 @@
     }
     #conteudo #sobre .historia .texto {
         padding: 2em 0;
-        width: 90vw;
+        width: 93vw;
+    }
+    #conteudo #sobre .historia .texto ul {
+        gap: 1.5em;
+    }
+    #conteudo #sobre .historia .texto ul li {
+        font-size: 1.3em;
     }
     #conteudo #sobre .historia .texto ul li::before {
-        left: -10%;
+        left: -13%;
     }
     #conteudo #sobre .historia .figura {
         max-width: 100%;
-        height: 25vh;
+        height: 100%;
+        margin-bottom: -0.3em;
         animation: reveal 1s ease-in-out both;
         animation-timeline: view();
         animation-range: entry 25% cover 40%;
@@ -106,6 +113,7 @@
 
     #conteudo #servicos .servicos-proprios .lista-de-servicos .card {
         max-width: 90%;
+        font-size: 1.2em;
     }
 
     #conteudo #servicos .servicos-parceiros .lista-de-parcerias {
@@ -116,6 +124,7 @@
     #conteudo #servicos .servicos-parceiros .lista-de-parcerias .card {
         align-items: center;
         gap: 0.6em;
+        font-size: 1.1em;
     }
     #conteudo #servicos .servicos-parceiros .lista-de-parcerias .card .lista-de-servicos {
         align-items: center;
@@ -136,8 +145,9 @@
     }
 
     #conteudo #topo {
-        font-size: 4em;
+        font-size: 3.5em;
         padding: 2.5%;
+        right: 4%;
     }
 
     #rodape {
@@ -175,6 +185,9 @@
         animation: direita 2s ease-out;
         animation-timeline: view();
         animation-range: cover -10% cover 48%;
+    }
+    #rodape .info-add .info ul a {
+        padding: 0.5em;
     }
     #rodape #contatos {
         align-items: center;
