--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -142,3 +142,24 @@ button {
         clip-path: inset(0 0 0 0);
     }
 }
+
+@keyframes btn {
+    from {
+        box-shadow: none;
+    }
+    to {
+        box-shadow: 0px 0px 16px 0px var(--amarela);
+    }
+}
+
+@keyframes contatos {
+    0% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.06);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
