--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -232,7 +232,7 @@
 /* Dispositivos deitados */
 @media screen and (max-width: 1200px) and (orientation: landscape) {
     body {
-        font-size: 2.5vw;
+        font-size: 2vw;
     }
 
     #cabecalho .logo img {
@@ -244,14 +244,14 @@
     }
 
     #conteudo #sobre .lugar p {
-        width: 70%;
+        margin: auto 22%;
     }
     #conteudo #sobre .lugar p:nth-child(odd) {
-        transform: translateX(-20%);
+        transform: translateX(-30%);
         text-align: left;
     }
     #conteudo #sobre .lugar p:nth-child(even) {
-        transform: translateX(20%);
+        transform: translateX(30%);
         text-align: right;
     }
 
@@ -289,11 +289,11 @@
     }
 
     #rodape .logo img {
-        width: 12vw;
+        width: 10vw;
         height: auto;
     }
     #rodape .logo .titulo {
-        width: 55%;
+        width: 40%;
     }
     #rodape .info-add {
         max-width: 60%;
