--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -4,14 +4,10 @@
 @media screen and (max-width: 1200px) {
     #cabecalho {
         position: relative;
-        padding: 1.5em 1em;
-    }
-    #cabecalho .logo {
-        gap: 0.5em;
     }
     #cabecalho .icone {
         display: block;
-        font-size: 2.5em;
+        font-size: 2.2em;
         font-weight: bold;
         padding: 0.2em;
         border-radius: 0.4em;
@@ -32,7 +28,7 @@
         color: white;
         box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.158);
         border: 1px dashed white;
-        border-bottom-left-radius: 1em;
+        border-bottom-left-radius: 1.5em;
         z-index: 1;
         animation: nav .4s ease-out;
     }
@@ -49,7 +45,7 @@
     }
 
     #conteudo #sobre .lugar p {
-        padding: 0.8em;
+        padding: 0.7em 0.9em 0.8em;
     }
 
     #rodape {
@@ -111,13 +107,16 @@
         font-size: 4vw;
     }
 
+    #cabecalho {
+        padding: 1.5em 0.5em 1.5em 1em;
+    }
     #cabecalho .logo img {
-        width: 12vw;
+        width: 10vw;
         height: auto;
     }
     #cabecalho .logo .titulo {
-        font-size: 1.5em;
-        width: 75%;
+        font-size: 1.15em;
+        width: 80%;
     }
 
     #conteudo #sobre .lugar {
@@ -203,12 +202,12 @@
     }
 
     #rodape .logo img {
-        width: 14vw;
+        width: 10vw;
         height: auto;
     }
     #rodape .logo .titulo {
-        font-size: 1.5em;
-        width: 75%;
+        font-size: 1.15em;
+        width: 85%;
     }
     #rodape .info-add {
         max-width: 100%;
@@ -236,11 +235,11 @@
     }
 
     #cabecalho .logo img {
-        width: 10vw;
+        width: 6vw;
         height: auto;
     }
     #cabecalho .logo .titulo {
-        width: 55%;
+        width: 70%;
     }
 
     #conteudo #sobre .lugar p {
@@ -289,11 +288,11 @@
     }
 
     #rodape .logo img {
-        width: 10vw;
+        width: 6vw;
         height: auto;
     }
     #rodape .logo .titulo {
-        width: 40%;
+        width: 70%;
     }
     #rodape .info-add {
         margin: auto;
